--- a/web/index.html
+++ b/web/index.html
@@ -5,52 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Vehicles</title>
+    <link rel="stylesheet" href="/styles/web_style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
 </head>
-
-<style>
-    * {
-        font-family: 'Montserrat', sans-serif;
-    }
-
-    main {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        gap: 1rem;
-        padding: 1rem;
-    }
-
-    article {
-        border: 1px solid #ccc;
-        padding: 1rem;
-        border-radius: 5px;
-    }
-
-    article p {
-        width: auto;
-        height: 50px;
-    }
-
-    img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        border-radius: 5px;
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
-
-    button {
-        background-color: #f00;
-        color: #fff;
-        border: none;
-        padding: 0.5rem 1rem;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-</style>
 
 <script type="module">
     fetch('http://localhost:6675/vehicles')
@@ -58,15 +17,18 @@
         .then(data => {
             const dataVehicles = data.map(vehicle => {
                 return `<article data-id=${vehicle.id}>
-                <h1>${vehicle.name}</h1>
-                <p>${vehicle.description}</p>
-                Price: <strong>${vehicle.price}</strong>
-                <img src="${vehicle.urlImage}" alt="${vehicle.name}">
-                <button>Quitar</button>
+                    <div class="infoCar">
+                        <h1>${vehicle.name}</h1>
+                        <label>Year: <strong>${vehicle.year}</strong></label>
+                        <p>${vehicle.description}</p>
+                        <label>Price: <strong>${vehicle.price}</strong></label>
+                        <button>Quitar</button>
+                    </div>
+                <img src="${vehicle.urlImage}" alt="${vehicle.name}">                
             </article>`
             }).join('')
 
-            document.querySelector('main').innerHTML = dataVehicles
+            document.querySelector('div', 'slide_content').innerHTML = dataVehicles
             document.addEventListener('click', e => {
                 if (e.target.matches('button')) {
                     const article = e.target.closest('article')
@@ -85,7 +47,9 @@
 
 <body>
     <main>
+        <div class="slide_content">
 
+        </div>
     </main>
 </body>
 
