Refactor HTML structure and add CSS styles for improved layout and navigation

--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sports Vehicles</title>
-    <link rel="stylesheet" href="./styles/web_style.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -30,7 +32,7 @@
           })
           .join('')
 
-        document.querySelector('div', 'slide_content').innerHTML = dataVehicles
+        document.querySelector('.slide_content').innerHTML = dataVehicles
         let cont = 0
         document.addEventListener('keydown', (e) => {
           const article = document.querySelectorAll('article')
@@ -75,6 +77,15 @@
   </script>
 
   <body>
+    <header>
+      <nav class="menu-bar">
+        <img src="./public/logo_vehicle.svg" alt="FakeAPI logo car sport" />
+        <ul>
+          <li><a href="./documentation">API Documentation</a></li>
+          <li><a href="">More</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <div class="slide_content"></div>
     </main>
