Remove unused utility functions and update stylesheet links for consistency

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sports Vehicles</title>
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -79,9 +79,9 @@
   <body>
     <header>
       <nav class="menu-bar">
-        <img src="./public/logo_vehicle.svg" alt="FakeAPI logo car sport" />
+        <img src="/logo_vehicle.svg" alt="FakeAPI logo car sport" />
         <ul>
-          <li><a href="./documentation">API Documentation</a></li>
+          <li><a href="./documentation.html">API Documentation</a></li>
           <li><a href="">More</a></li>
         </ul>
       </nav>
