Refactor endpoint headings in documentation for consistency

--- a/web/documentation.html
+++ b/web/documentation.html
@@ -92,7 +92,7 @@
 
         <h3>Endpoints</h3>
         <hr>
-        <h4>1. Get All Vehicles</h4>
+        <h4>Get All Vehicles</h4>
         <p>Retrieve a list of all vehicles.</p>
         <div class="code-block">
           <button class="copy-btn" data-clipboard-target="#code-vehicles">
@@ -125,7 +125,7 @@
   }]</code></pre>
         </section>
 
-        <h4>2. Get Vehicle by ID</h4>
+        <h4>Get Vehicle by ID</h4>
         <p>Retrieve details of a specific vehicle by its ID.</p>
         <div class="code-block">
           <button class="copy-btn" data-clipboard-target="#code-vehicle-id">
@@ -150,7 +150,7 @@
           </pre>
         </div>
 
-        <h4>3. Add a New Vehicle</h4>
+        <h4>Add a New Vehicle</h4>
         <p>Create a new vehicle entry.</p>
         <div class="code-block">
           <button class="copy-btn" data-clipboard-target="#code-vehicle-post">
@@ -184,7 +184,7 @@
 }</code></pre>
         </div>
 
-        <h4>4. Update a Vehicle</h4>
+        <h4>Update a Vehicle</h4>
         <p>Update details of an existing vehicle.</p>
         <div class="code-block">
           <button class="copy-btn" data-clipboard-target="#code-vehicle-put">
@@ -215,7 +215,7 @@
 }</code></pre>
         </div>
 
-        <h4>5. Delete a Vehicle</h4>
+        <h4>Delete a Vehicle</h4>
         <p>Delete a vehicle by its ID.</p>
         <div class="code-block">
           <button class="copy-btn" data-clipboard-target="#code-vehicle-delete">
